tests/compile_fail/missing_type.out
In file included from tests/compile_fail/missing_type.cpp:14:
src/lguim/secureenumconverter.inc:24:6: error: #error "SEC_TYPE not defined"
     #error "SEC_TYPE not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
